# aethervault

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  knowledge-graph.py  llama_proxy.py  moonshot_proxy.py  requirements-core.txt  requirements.txt  start_services.sh  vertex_proxy.py
.github/workflows/: add-codex-routing.yml  add-telegram.yml  bulletproof-start.yml  check-kimi-download.yml  check-logs.yml  check-status.yml  configure-security.yml  (+11 more)
assistant/: MEMORY.md  MEMORY.md.bak.20260216_121119  SOUL.md  TASK_QUEUE.md  config.json
config/: aethervault.json  auth-profiles.json  briefing.json  env.example  knowledge-graph.json  mcp-servers.json  system-prompt.md  twitter-monitor.json.disabled
deploy/: subagent-config.json  upgrade.sh
docs/: ARCHITECTURE.md  CAPABILITIES.md  CONNECTORS.md  DEPLOYMENT.md  MEMORY-SYSTEM.md  OPERATIONS.md  OWNER-CONTEXT.md  SUPERCLUSTERED-ARCHITECTURE.md  aethervault-battle-report.md  aethervault-bleeding-edge-strategy.md  aethervault-grok-sandbox-deployment.md  aethervault-subagents-report.md  aethervault-ultimate-report.md  aethervault-v4-report.md  aethervault-v5-battle-report.md  config-reference.json  sota-agent-harness-report-2026.md
hooks/: anthropic-model-hook.py  anthropic-model-hook.py.bak  capabilities.py  capsule-manager.sh  claude.py  codex-hook.sh  codex-hook.sh.bak.20260213132441  codex-model-hook.py  codex-model-hook.py.bak  codex-model-hook.py.bak.20260213132441  grok-search.py  hot_memory_store.py  knowledge-graph.py  mcp-gateway.py  memory-extractor.py  memory-health.py  memory-scorer.py  morning-briefing.py  nightly-consolidation.py  proactive-checkin.py  proactive-checkin.sh  sandbox-run.py  scale.py  session-manager.py  set-chat-id.sh  weekly-reflection.py
mcp/: filesystem-server.py  system-server.py
patches/: apply-patches.sh  fix-token-tracking.patch
research/: agent-sdk-deep-dive-2026-02-13.md  agent-system-prompting-best-practices-2026.md
scripts/: adversarial-test-battery.sh  adversarial_swarm.py  aethervault-battle-test.py  aethervault-battle-test.sh  aethervault-battle-v2.sh  aethervault-battle-v3.sh  aethervault-monitor.sh  aethervault-telegram-test.sh  capsule-manager.sh  doc-gardener.py  emergency-truncate.sh  memory-linter.py  migrate-hot-memories.sh  morning-briefing.sh  nightly-consolidation.sh  run-superclustered-dev.sh  self-improve-validate.sh  self-improve.sh  session-manager.py  start-kimi-server.sh
src/: agent.rs  agent_log.rs  claude.rs  cli.rs  config.rs  config_file.rs  consolidation.rs  main.rs  mcp.rs  memory_db.rs  query.rs  services.rs  skill_registry.rs  tool_args.rs  tool_defs.rs  tool_exec.rs  types.rs  util.rs
superclustered/: README.md  manage.py
tests/: adversarial_canary.txt  multi-shot-test.sh
(+112 files in other folders)
