[package]
name = "aethervault"
version = "0.0.1"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.43"
aether-core = { path = "vendor/aether-core", default-features = false, features = ["lex", "temporal_track"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
walkdir = "2.5.0"
ureq = { version = "2.10.1", default-features = false, features = ["json", "tls"] }
tiny_http = "0.12.0"
url = "2.5.4"
urlencoding = "2.1.3"

[features]
default = []
vec = ["aether-core/vec"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
