[package]
name = "aethervault"
version = "0.0.2"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.43"
aether-core = { path = "vendor/aether-core", default-features = false, features = ["lex", "temporal_track"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rayon = "1.10.0"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
walkdir = "2.5.0"
ureq = { version = "2.10.1", default-features = false, features = ["json", "tls"] }
tungstenite = { version = "0.26.2", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "blocking", "rustls-tls", "multipart"] }
tiny_http = "0.12.0"
url = "2.5.4"
urlencoding = "2.1.3"
base64 = "0.22.1"
libc = "0.2"
shlex = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = []
vec = ["aether-core/vec"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"  # Required for catch_unwind crash safety in bridge
